--- a/css/timecalc.css
+++ b/css/timecalc.css
@@ -10,6 +10,16 @@
     padding-bottom: 30px;
 }
 
-.label-left {    
+@media all and (max-width: 640px) {
+    #result {
+        font-size: 3.5em;
+    }
 
+    .container {
+        margin: 20px;
+    }
+
+    .buttons, .input-group{
+        padding-bottom: 30px;
+    }
 }
