--- a/css/timecalc.css
+++ b/css/timecalc.css
@@ -13,3 +13,98 @@
 .checkbox-inline {
     padding-bottom: 15px;    
 }
+
+.input-group-addon {
+    padding: 0px 10px !important;
+}
+
+label.ampm-switch {
+    z-index: 1;
+    position: relative;
+    border-radius: 3px;
+    margin: 0;
+    cursor: pointer;
+    background-color: #ced4da;
+}
+
+label.ampm-switch:before,
+label.ampm-switch:after {
+    box-sizing: border-box;
+    display: block;
+    width: 40px;
+    height: 20px;
+    font-size: 12px;
+    /* font-weight: bold; */
+    text-align: center;
+    line-height: 20px;
+    color: #ffffff;
+}
+
+label.ampm-switch:before {
+    content: "AM";
+}
+
+label.ampm-switch:after {
+    content: "PM";
+}
+
+label.ampm-switch input {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    margin: 0;
+    padding: 0;
+    border: 0;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0.1);
+    filter: alpha(opacity=0.1);
+    opacity: .001;
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+}
+
+label.ampm-switch .toggle-button {
+    z-index: 2;
+    display: inline-block;  
+    position: absolute;
+    right: 0;
+    top:0;
+    padding: 0;
+    margin: 0;
+    border-radius: 3px;
+
+    height: 20px;
+    background: transparent;
+    box-sizing: border-box;
+    background-clip: padding-box;
+    white-space: nowrap;
+
+    -webkit-transition: top .05s ease-in-out;
+    -moz-transition: top .05s ease-in-out;
+    -o-transition: top .05s ease-in-out;
+    -ms-transition: top .05s ease-in-out;
+    transition: top .05s ease-in-out;
+    background: #007bff;
+}
+
+label.ampm-switch input:checked + .toggle-button {
+    top: 20px;
+}
+
+label.ampm-switch .toggle-button:before {
+    box-sizing: border-box;
+    display: block;
+    width: 40px;
+    height: 20px;
+    font-size: 12px;
+    /* font-weight: bold; */
+    text-align: center;
+    line-height: 20px;
+    color: #ffffff;
+}
+
+label.ampm-switch .toggle-button:before {
+    content: "AM";
+}
+
+label.ampm-switch input:checked + .toggle-button:before {
+    content: "PM";
+}
